<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_VSIStorageSystemDefaultParameters" Id="{9916f9f0-5dbb-43f1-b71f-1a1574216a97}">
    <Declaration><![CDATA[TYPE ST_VSIStorageSystemDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [0,100];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>