<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="FB_VSIStorage" Id="{03ad9570-09c5-427c-a337-23e8ce2e36e7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_VSIStorage
VAR_INPUT
END_VAR
VAR_OUTPUT
	{attribute 'OPC.UA.DA' := '1'}	
	localState : ST_VSIStorageState;
END_VAR
VAR
	UpperTemperatureSensor : FB_TemperatureSensor; //upper temperature sensor
	MidTemperatureSensor : FB_TemperatureSensor; //mid temperature sensor
	LowerTemperatureSensor : FB_TemperatureSensor; //lower temperature sensor
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//sensors
UpperTemperatureSensor();
MidTemperatureSensor();
LowerTemperatureSensor();

//get sensor inputs
UpperTemperatureSensor.GetState_AI();
MidTemperatureSensor.GetState_AI();
LowerTemperatureSensor.GetState_AI();

//set outputs
localState.fUpperTemperature := UpperTemperatureSensor.fTemperature;
localState.fMidTemperature := MidTemperatureSensor.fTemperature;
localState.fLowerTemperature := LowerTemperatureSensor.fTemperature;]]></ST>
    </Implementation>
    <LineIds Name="FB_VSIStorage">
      <LineId Id="64" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="1" />
      <LineId Id="61" Count="0" />
      <LineId Id="23" Count="7" />
      <LineId Id="46" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>